--- a/regstyle.css
+++ b/regstyle.css
@@ -25,12 +25,15 @@ a{
     padding: 10px;
     margin-top: 10px;
     width: 100%;
-    background-color: rgb(41, 57, 194);
+    background-color: rgb(35, 50, 183);
     border: none;
+    color: white;
     border-radius: 3px;
 }
 .btn-submit:hover{
-    opacity: 0.8;
+    /* background-color: darkblue; */
+    cursor: pointer;
+    opacity: .9;
 }
 .formField{
     display: flex;
