--- a/login1.css
+++ b/login1.css
@@ -1,10 +1,23 @@
 body{
-    background-color: #d7d8dd;
+    /* background-color: #d7d8dd; */
+    background-image: url("images/pic\ \(2\).jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 form {
-    border: 3px solid #f1f1f1;
+    border: 3px solid #d7d8dd;
+    border-radius: 3px;
     color: black;
+    width: 420px;
+    margin: 8vh auto 0 auto;
+    background-color: #d7d8dd;
+}
+
+form h3{
+    text-align: center;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
 input[type=text], input[type=password] {
