--- a/regstyle.css
+++ b/regstyle.css
@@ -2,7 +2,7 @@ body{
     background-image: url("images/pic\ \(2\).jpg");
     background-size: cover;
     background-attachment: fixed;
-    /* background-color: blueviolet; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #form{
